--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0-beta.11",
+    "sass": "^1.50.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.4.4",
     "vite": "^2.6.13",
