--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "vite": "^2.6.13",
     "vitepress-for-component": "^0.16.2",
     "vue-jest": "^5.0.0-alpha.6",
-    "vue-tsc": "^0.29.2"
+    "vue-tsc": "^0.29.2",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "keywords": [
     "vue",
